--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,7 +1,7 @@
 timezone = 9
 
 voicechannel = 
-textchannel = 720305314511061063
+textchannel = 
 ladderchannel = 
 jungsanchannel = 
 killchannel = 
