--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 720264454486622272
 textchannel = 720305314511061063
 ladderchannel = 
 jungsanchannel = 
