--- a/test_setting.ini
+++ b/test_setting.ini
@@ -2,7 +2,7 @@ timezone = 9
 
 voicechannel = 720264454486622272
 textchannel = 720305314511061063
-ladderchannel = 
+ladderchannel = 764018637958545459
 jungsanchannel = 
 killchannel = 
 racingchannel = 
